--- a/lab/badux/index.html
+++ b/lab/badux/index.html
@@ -38,11 +38,7 @@
         </p>
       </div>
       <div class="section__content">
-        <img
-          class="section__image"
-          src="/lab/badux/img/thrid.png"
-          alt="thrid"
-        />
+        <img class="section__image" src="/img/thrid.png" alt="thrid" />
         <h2 class="section__subtitle">This is a third example</h2>
         <p class="section__note section__dot">
           The hotel booking site doesn't provide how many people, it could be 2
